# 14-genomics-bwt-aligner

./: CMakeLists.txt  README.md  bwt_aligner.cp312-win_amd64.pyd  test_sa.cpp  test_sw.cpp
include/: aligner.h  backward_search.h  bwt.h  fasta_reader.h  fastq_reader.h  fm_index.h  sam_writer.h  sequence.h  smith_waterman.h  suffix_array.h
python/: debug_test.py  generate_test_data.py  run_aligner.py  test_aligner.py
python/test_data/: output_paired.sam  output_single.sam  reads_R1.fastq  reference.fasta
src/: aligner.cpp  backward_search.cpp  bwt.cpp  fasta_reader.cpp  fastq_reader.cpp  fm_index.cpp  pybind_module.cpp  sam_writer.cpp  smith_waterman.cpp  suffix_array.cpp
test_data/: reads.fastq  reads_R2.fastq
